--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <meta charset = "UTF-8">
       <title>React App</title>
       <link rel="stylesheet" href="styles.css">
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+      <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
    </head>
 
    <body>
