--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
    <body>
       <div id = "app"></div>
+      <script>
+        
+
+      </script>
       <script src = "index.js"></script>
    </body>
 
